# hogg.io

./: .babelrc  .cursorrules  .eslintrc  .firebaserc  .gitignore  .ignore  .prettierignore  .travis.yml  Cargo.toml  README.md  artwork.sketch  cargo.toml  firebase.json  hogg.io.code-workspace  hogg.io.sketch  index.html  knip.json  nohup.out  package.json  prerender.js  rust-toolchain.toml  rustfmt.toml  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  webpack.config.js  webpack.static.config.js
workspaces/circular-sequence/: Cargo.toml  package.json
workspaces/circular-sequence/src/: Article.tsx  Project.tsx  index.ts  types.ts
workspaces/circular-sequence/src-rust/: get_match.rs  get_match_tests.rs  lib.rs  min_permutation.rs  min_permutation_tests.rs  point_sequence.rs  search.rs  search_tests.rs  sequence.rs  sequence_store.rs  sequence_store_tests.rs  sequence_tests.rs  sort.rs  sort_tests.rs  super_script.rs  to_string.rs  to_string_tests.rs  wasm_api.rs
workspaces/circular-sequence/src-rust/draw/: mod.rs
workspaces/circular-sequence/src/Article/: index.tsx
workspaces/circular-sequence/src/Presentation/: index.tsx
workspaces/epigenetics/: Cargo.toml  package.json
workspaces/epigenetics/src/Article/: Glossary.tsx  glossary_terms.json  index.tsx
workspaces/epigenetics/src/Presentation/: index.tsx
workspaces/gap-validation/: Cargo.toml  package.json
workspaces/gap-validation/src/: index.ts
workspaces/gap-validation/src-rust/: lib.rs
workspaces/gap-validation/src/Article/: index.tsx
workspaces/geometry/: Cargo.toml  package.json
workspaces/geometry/src/: bbox.rs  bbox_tests.rs  convex_hull.rs  convex_hull_tests.rs  lib.rs  line_segment.rs  line_segment_tests.rs  math_tests.rs  point.rs  point_tests.rs  polygon.rs  types.ts
workspaces/geometry/src-rust/: lib.rs  line_segment.rs  line_segment_tests.rs  point.rs  point_tests.rs  polygon.rs  polygon_tests.rs
workspaces/geometry/src/snapshots/: geometry__convex_hull__tests__creates_an_empty_convex_hull_from_0_line_segments.snap  geometry__convex_hull__tests__creates_an_empty_convex_hull_from_1_line_segments.snap  geometry__convex_hull__tests__creates_an_empty_convex_hull_from_2_line_segments.snap  tiling__geometry__convex_hull__tests__creates_an_empty_convex_hull_from_0_line_segments.snap  tiling__geometry__convex_hull__tests__creates_an_empty_convex_hull_from_1_line_segments.snap  tiling__geometry__convex_hull__tests__finds_line_segments_for_vector_terminal_points_top.snap  tiling__geometry__convex_hull__tests__orders_points_correctly_from_triangle_line_segments.snap
workspaces/line-segment-extending/: Cargo.toml  package.json
workspaces/line-segment-extending/src/: Article.tsx  index.ts  react-app-env.d.ts  types.ts
workspaces/line-segment-extending/src-rust/: extend_line_segment.rs  lib.rs
workspaces/line-segment-extending/src/Presentation/: Controls.tsx  LineSegmentProvider.tsx  Renderer.tsx  Settings.tsx  index.tsx  useLineSegmentContext.ts
workspaces/spatial-grid-map/: Cargo.toml  package.json
workspaces/spatial-grid-map/src/: index.ts
workspaces/spatial-grid-map/src-rust/: bucket.rs  grid.rs  grid_tests.rs  lib.rs  location.rs  location_tests.rs  math.rs  utils.rs  utils_tests.rs  visitor.rs  visitor_tests.rs
workspaces/spatial-grid-map/src-rust/snapshots/: hogg_spatial_grid_map__location__tests__bottom.snap  hogg_spatial_grid_map__location__tests__bottom_left.snap  hogg_spatial_grid_map__location__tests__bottom_oob.snap  hogg_spatial_grid_map__location__tests__bottom_right.snap  hogg_spatial_grid_map__location__tests__center.snap  hogg_spatial_grid_map__location__tests__left.snap  hogg_spatial_grid_map__location__tests__left_oob.snap  hogg_spatial_grid_map__location__tests__order_distance.snap  hogg_spatial_grid_map__location__tests__order_radians.snap  hogg_spatial_grid_map__location__tests__right.snap  hogg_spatial_grid_map__location__tests__right_oob.snap  hogg_spatial_grid_map__location__tests__snap_x_just_under.snap  hogg_spatial_grid_map__location__tests__snap_y_just_under.snap  hogg_spatial_grid_map__location__tests__top.snap  hogg_spatial_grid_map__location__tests__top_left.snap  hogg_spatial_grid_map__location__tests__top_oob.snap  hogg_spatial_grid_map__location__tests__top_right.snap  spatial_grid_map__location__tests__bottom.snap  spatial_grid_map__location__tests__bottom_left.snap  spatial_grid_map__location__tests__bottom_oob.snap  spatial_grid_map__location__tests__bottom_right.snap  spatial_grid_map__location__tests__center.snap  spatial_grid_map__location__tests__left.snap  spatial_grid_map__location__tests__left_oob.snap  spatial_grid_map__location__tests__order_distance.snap  spatial_grid_map__location__tests__order_radians.snap  spatial_grid_map__location__tests__right.snap  spatial_grid_map__location__tests__right_oob.snap  spatial_grid_map__location__tests__snap_x_just_under.snap  spatial_grid_map__location__tests__snap_y_just_under.snap  spatial_grid_map__location__tests__top.snap  spatial_grid_map__location__tests__top_left.snap  spatial_grid_map__location__tests__top_oob.snap  spatial_grid_map__location__tests__top_right.snap
workspaces/spatial-grid-map/src/Article/: index.tsx
workspaces/tilings-validation-overlaps/: Cargo.toml  package.json
workspaces/tilings-validation-overlaps/src/: index.ts
workspaces/tilings-validation-overlaps/src-rust/: lib.rs
workspaces/tilings-validation-overlaps/src/Article/: index.tsx
workspaces/tilings-validation-vertex-types/: Cargo.toml  package.json
workspaces/tilings-validation-vertex-types/src/: index.ts
workspaces/tilings-validation-vertex-types/src-rust/: lib.rs
workspaces/tilings/src-rust/datastore/: Cargo.toml
workspaces/tilings/src-rust/export/: Cargo.toml
workspaces/tilings/src-rust/generator/: Cargo.toml
workspaces/tilings/src-rust/parser/: Cargo.toml  (+1 more)
workspaces/wasm/: Cargo.toml  package.json  watch-dirs.txt  watch.sh
workspaces/wasm/src/: Article.tsx  index.ts  types.ts
workspaces/wasm/src-rust/: circular_sequence.rs  events.rs  lib.rs  line_segment_extending.rs  tilings.rs
(+1273 files in other folders)
