[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
strip = true

[workspace]
members = [
  "workspaces/circular-sequence",
  "workspaces/line-segment-extending",
  "workspaces/spatial-grid-map",
  "workspaces/tilings/src-rust/*",
  "workspaces/wasm",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.87"
chrono = { version = "0.4.38", features = ["serde"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
derivative = "2.2.0"
futures = "0.3.27"
futures-util = "0.3.27"
insta = { version = "1.40.0", features = ["json"] }
log = "0.4.22"
pretty_assertions = "1.3.0"
rand = "0.8.4"
serde = { version = "1.0.210", features = ["derive"] }
serde_arrays = "0.1.0"
serde_json = "1.0.128"
serde-wasm-bindgen = "0.6.5"
serde_with = "3.11.0"
sqlx = { version = "0.8.2", features = [
  "chrono",
  "macros",
  "postgres",
  "runtime-async-std-native-tls",
] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tracing = { version = "0.1.37" }
tracing-appender = "0.2"
tracing-subscriber = "0.3"
typeshare = { version = "1.0.3" }
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70" }
