[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
strip = true


[workspace]
members = [
  "workspaces/circular-sequence",
  "workspaces/geometry",
  "workspaces/line-segment-extending",
  "workspaces/epigenetics",
  "workspaces/spatial-grid-map",
  "workspaces/tilings/src-rust/*",
  "workspaces/tilings-validation-gaps",
  "workspaces/tilings-validation-overlaps",
  "workspaces/tilings-validation-vertex-types",
  "workspaces/wasm",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.94"
chrono = { version = "0.4.39", features = ["serde"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures = "0.3.27"
futures-util = "0.3.31"
insta = { version = "1.41.1", features = ["json", "redactions"] }
log = "0.4.22"
ordered-float = { version = "4.6.0", features = ["serde"] }
pretty_assertions = "1.4.1"
rand = "0.8.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_arrays = "0.1.0"
serde_json = { version = "1.0.133", features = ["arbitrary_precision"] }
serde-wasm-bindgen = "0.6.5"
serde_with = "3.11.0"
sqlx = { version = "0.8.2", features = [
  "chrono",
  "macros",
  "postgres",
  "runtime-async-std-native-tls",
] }
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"
tracing = { version = "0.1.41" }
tracing-appender = "0.2"
tracing-subscriber = "0.3.19"
typeshare = { version = "1.0.4" }
wasm-bindgen = { version = "0.2.99" }
web-sys = { version = "0.3.76" }
