[package]
name = "circular-sequence"
version = "0.0.0"
edition = "2021"
authors = ["Harry Hogg <harry@hogg.io>"]
description = "A library for working with bidirectional circular sequences"
license = "MIT/Apache-2.0"
repository = "https://github.com/hhogg/hogg.io"

[lib]
crate-type = ["cdylib", "rlib"]
name = "circular_sequence"
path = "src-rust/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
typeshare.workspace = true
wasm-bindgen.workspace = true

canvas = { path = "../canvas" }
geometry = { path = "../geometry" }

[dev-dependencies]
pretty_assertions.workspace = true
