[package]
name = "hogg_circular_sequence"
version = "0.0.0"
edition = "2021"
authors = ["Harry Hogg <harry@hogg.io>"]
description = "A library for working with bidirectional circular sequences"
license = "MIT/Apache-2.0"
repository = "https://github.com/hhogg/hogg.io"

[lib]
name = "hogg_circular_sequence"
path = "src-rust/lib.rs"

[dependencies]
hogg_geometry = { path = "../geometry" }
hogg_spatial_grid_map = { path = "../spatial-grid-map" }
ordered-float.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
typeshare.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
