[package]
name = "hogg_epigenetics"
version = "0.0.0"
edition = "2021"
authors = ["Harry Hogg <harry@hogg.io>"]
description = "A library for working with epigenetics"
license = "MIT/Apache-2.0"
repository = "https://github.com/hhogg/hogg.io"

[lib]
name = "hogg_epigenetics"
path = "src-rust/lib.rs"

[dependencies]
console_log.workspace = true
console_error_panic_hook.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
typeshare.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
  'console',
  'DedicatedWorkerGlobalScope',
  'OffscreenCanvas',
  'OffscreenCanvasRenderingContext2d',
  'Window',
] }

[dev-dependencies]
pretty_assertions.workspace = true
