[package]
name = "gap_validation"
version = "0.0.0"
edition = "2021"
authors = ["Harry Hogg <harry@hogg.io>"]
description = ""
license = "MIT/Apache-2.0"
repository = "https://github.com/hhogg/hogg.io"

[lib]
name = "gap_validation"
path = "src-rust/lib.rs"

[dependencies]
geometry = { path = "../geometry" }
spatial_grid_map = { path = "../spatial-grid-map" }
