[package]
name = "geometry"
version = "0.0.0"
edition = "2021"
authors = ["Harry Hogg <harry@hogg.io>"]
description = ""
license = "MIT/Apache-2.0"
repository = "https://github.com/hhogg/hogg.io"

[lib]
name = "geometry"
path = "src/lib.rs"

[dependencies]
ordered-float.workspace = true
serde.workspace = true
serde_json.workspace = true
typeshare.workspace = true

line_segment_extending = { path = "../line-segment-extending" }
spatial_grid_map = { path = "../spatial-grid-map" }

[dev-dependencies]
insta = { workspace = true, features = ["redactions"] }
pretty_assertions.workspace = true
