[package]
name = "hogg_line_segment_extending"
version = "0.0.0"
edition = "2021"
authors = ["Harry Hogg <harry@hogg.io>"]
description = "A library for working with bidirectional circular sequences"
license = "MIT/Apache-2.0"
repository = "https://github.com/hhogg/hogg.io"

[lib]
name = "hogg_line_segment_extending"
path = "src-rust/lib.rs"

[dependencies]
console_log.workspace = true
console_error_panic_hook.workspace = true
hogg_spatial_grid_map = { path = "../spatial-grid-map" }
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
