[package]
name = "wasm"
version = "0.0.0"
edition = "2021"
authors = ["Harry Hogg <harry@hogg.io>"]
description = ""
license = "MIT/Apache-2.0"
repository = "https://github.com/hhogg/hogg.io"

[lib]
crate-type = ["cdylib", "rlib"]
name = "wasm"
path = "src-rust/lib.rs"

[dependencies]
console_log.workspace = true
console_error_panic_hook.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
typeshare.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
  'console',
  'DedicatedWorkerGlobalScope',
  'OffscreenCanvas',
  'OffscreenCanvasRenderingContext2d',
  'Window',
] }

spatial_grid_map = { path = "../spatial-grid-map" }
circular_sequence = { path = "../circular-sequence" }
line_segment_extending = { path = "../line-segment-extending" }
tiling = { path = "../tilings/src-rust/tiling" }
tiling-renderer = { path = "../tilings/src-rust/renderer" }

[dev-dependencies]
pretty_assertions.workspace = true
