[package]
name = "tiling-datastore"
version = "0.0.0"
edition = "2021"
authors = ["Harry Hogg <harry@hogg.io>"]
description = "Common datastore helpers"
license = "MIT/Apache-2.0"
repository = "https://github.com/hhogg/hogg.io"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
typeshare.workspace = true

local-ip-address = "0.6.1"
sysinfo = "0.30.11"
tiling = { path = "../tiling" }
