[package]
name = "hogg_tiling_datastore"
version = "0.0.0"
edition = "2021"
authors = ["Harry Hogg <harry@hogg.io>"]
description = "Common datastore helpers"
license = "MIT/Apache-2.0"
repository = "https://github.com/hhogg/hogg.io"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
futures-util.workspace = true
hogg_tiling_generator = { path = "../generator" }
local-ip-address = "0.6.1"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
sysinfo = "0.33.0"
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
typeshare.workspace = true
