[package]
name = "hogg_tiling_export"
version = "0.0.0"
edition = "2021"
authors = ["Harry Hogg <harry@hogg.io>"]
description = "Export util for the valid and invalid notations from Postgres to CSV"
license = "MIT/Apache-2.0"
repository = "https://github.com/hhogg/hogg.io"

[[bin]]
name = "tiling-export"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { version = "4.5.4", features = ["derive"] }
hogg_tiling = { path = "../tiling" }
hogg_tiling_datastore = { path = "../datastore" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
