[package]
name = "hogg_tiling_generator"
version = "0.0.0"
edition = "2021"
authors = ["Harry Hogg <harry@hogg.io>"]
description = "Core code for parsing the GomJau-Hogg notation, rendering a tiling and traversing the tiling tree"
license = "MIT/Apache-2.0"
repository = "https://github.com/hhogg/hogg.io"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
hogg_circular_sequence = { path = "../../../circular-sequence" }
hogg_geometry = { path = "../../../geometry" }
hogg_line_segment_extending = { path = "../../../line-segment-extending" }
hogg_spatial_grid_map = { path = "../../../spatial-grid-map" }
hogg_tilings_validation_gaps = { path = "../../../tilings-validation-gaps" }
hogg_tilings_validation_overlaps = { path = "../../../tilings-validation-overlaps" }
hogg_tilings_validation_vertex_types = { path = "../../../tilings-validation-vertex-types" }
log.workspace = true
ordered-float.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
typeshare.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
insta = { workspace = true, features = ["redactions"] }
pretty_assertions.workspace = true
