[package]
name = "tiling-parser"
version = "0.0.0"
edition = "2021"
authors = ["Harry Hogg <harry@hogg.io>"]
description = "Parser utils for parsing GomJau-Hogg notation in the browser"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
console_log.workspace = true
console_error_panic_hook.workspace = true
log.workspace = true
tracing.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ['console'] }

# This is needed as a dependecy for wasm-bindgen
getrandom = { version = "0.2", features = ["js"] }
tiling = { path = "../tiling" }
