[package]
name = "tiling-renderer"
version = "0.0.0"
edition = "2021"
authors = ["Harry Hogg <harry@hogg.io>"]
description = "Renderer of GomJau-Hogg tilings to a WebCanvas"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
console_log.workspace = true
console_error_panic_hook.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
thiserror.workspace = true
typeshare.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
] }

colorgrad = "0.6.2"
# This is needed as a dependecy for wasm-bindgen
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
tiling = { path = "../tiling" }
