[package]
name = "hogg_tiling_renderer"
version = "0.0.0"
edition = "2021"
authors = ["Harry Hogg <harry@hogg.io>"]
description = "Renderer of GomJau-Hogg tilings to a WebCanvas"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
colorgrad = "0.7.0"
console_log.workspace = true
console_error_panic_hook.workspace = true
hogg_circular_sequence = { path = "../../../circular-sequence" }
hogg_geometry = { path = "../../../geometry" }
hogg_spatial_grid_map = { path = "../../../spatial-grid-map" }
hogg_tiling_generator = { path = "../generator" }
log.workspace = true
rand = "0.8.5"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
thiserror.workspace = true
typeshare.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
  'console',
  'CanvasGradient',
  'OffscreenCanvas',
  'OffscreenCanvasRenderingContext2d',
] }

# This is needed as a dependecy for wasm-bindgen
getrandom = { version = "0.2", features = ["js"] }
