[package]
name = "tiling-searcher"
version = "0.0.0"
edition = "2021"
authors = ["Harry Hogg <harry@hogg.io>"]
description = ""
license = "MIT/Apache-2.0"
repository = "https://github.com/hhogg/hogg.io"

[[bin]]
name = "tiling-searcher"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
typeshare.workspace = true

actix = "0.13.0"
async-channel = "1.8.0"
clap = { version = "4.1.8", features = ["derive"] }
nanoid = "0.4.0"
tiling = { path = "../tiling" }
tiling-datastore = { path = "../datastore" }
