[package]
name = "hogg_tiling_searcher"
version = "0.0.0"
edition = "2021"
authors = ["Harry Hogg <harry@hogg.io>"]
description = ""
license = "MIT/Apache-2.0"
repository = "https://github.com/hhogg/hogg.io"

[[bin]]
name = "tiling-searcher"
path = "src/main.rs"

[dependencies]
actix = "0.13.0"
anyhow.workspace = true
async-channel = "2.2.1"
clap = { version = "4.1.8", features = ["derive"] }
hogg_tiling_generator = { path = "../generator" }
hogg_tiling_datastore = { path = "../datastore" }
nanoid = "0.4.0"
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
typeshare.workspace = true
